# portable-Screen-OCR

./: .gitignore  Cargo.toml  README.md  build.rs  implementationplan.md  out.txt  run_err.txt
src/: capture.rs  clipboard.rs  config.rs  main.rs  notification.rs  ocr.rs  preprocessing.rs
